test_regress/t/t_pull_bitsel_conflict_bad.out
%Error-UNSUPPORTED: t/t_pull_bitsel_conflict_bad.v:17:28: Conflicting pullup/pulldown direction on bit 2 of 'bus'
                                                        : ... note: In instance 't'
   17 | module t(output wire [3:0] bus);
      |                            ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
